--- a/About.css
+++ b/About.css
@@ -26,6 +26,23 @@ background-color: white;
 background-color: rgb(250, 250, 250);
 }
 
+/*  Header left container  */
+
+.blue-tick-background {
+background-color: #18a2d7; 
+width: 28px; 
+height: 28px; 
+border-radius: 100%; 
+margin-top: 5px;
+margin-left: 5px;
+}
+
+.blue-tick {
+color: white;
+padding-left: 7px;
+padding-top: 3px;
+}
+
 /*  Header middle container  */
 
 .qasim-mughal {
