--- a/About.css
+++ b/About.css
@@ -111,7 +111,7 @@ cursor: pointer;
 background-color: rgb(250, 250, 250);
 }
 
-.menu-youtube-channels {
+.hashtags {
 width: 100%;
 height: 35px;
 background-color: transparent;
@@ -121,7 +121,7 @@ border-bottom: 1px solid rgb(238, 238, 238);
 font-family: tahoma, arial;
 cursor: pointer;
 }
-.menu-youtube-channels:hover {
+.hashtags:hover {
 background-color: rgb(250, 250, 250);
 }
 
