--- a/index.css
+++ b/index.css
@@ -111,7 +111,7 @@ cursor: pointer;
 background-color: rgb(250, 250, 250);
 }
 
-.hashtags {
+.menu-hashtags {
 width: 100%;
 height: 35px;
 color: black;
@@ -121,7 +121,7 @@ border-bottom: 1px solid rgb(238, 238, 238);
 font-family: tahoma, arial;
 cursor: pointer;
 }
-.hashtags:hover {
+.menu-hashtags:hover {
 background-color: rgb(250, 250, 250);
 }
 
