--- a/Hashtags.css
+++ b/Hashtags.css
@@ -152,8 +152,12 @@ margin-bottom: 22px;
 
 .container {
 display: flex;
-padding: auto;
+align-items: center;
 font-family: arial, tahoma;
+padding-left: 25px;
+padding-right: 25px;
+padding-top: 10px;
+padding-bottom: 10px;
 box-shadow: 0 0 1px 1px rgb(232, 222, 222);
 margin-bottom: 4px;
 }
