--- a/index.css
+++ b/index.css
@@ -2,7 +2,7 @@
 
 .body {
 margin-top: 50px;
-box-shadow: 0 0 1px 1px rgb(232, 222, 222);
+background-color: 0 0 1px 1px rgb(232, 222, 222);
 }
 
 /*  Header  */
