--- a/Hashtags.css
+++ b/Hashtags.css
@@ -160,6 +160,7 @@ padding-right: 25px;
 padding-top: 10px;
 padding-bottom: 10px;
 box-shadow: 0 0 1px 1px rgb(232, 222, 222);
+background-color: white;
 margin-bottom: 4px;
 }
 
